--- a/src/components/Header/index.css
+++ b/src/components/Header/index.css
@@ -3,7 +3,7 @@
     width: 100vw;
     height: 8vh;
 
-    background-color: #e6f3f0;
+    background-color: #f7fbfa;
 
     display: flex;
     justify-content: space-between;
